--- a/platformio.ini
+++ b/platformio.ini
@@ -15,6 +15,7 @@ lib_extra_dirs = ~/Documents/Arduino/libraries
 monitor_speed = 115200
 lib_deps = majicdesigns/MD_Parola@^3.7.1
 board = esp32doit-devkit-v1
+upload_port = COM3
 
 [platformio]
 description = Pinball Operating system for the ESP32 chip
