--- a/platformio.ini
+++ b/platformio.ini
@@ -13,7 +13,10 @@ platform = espressif32
 framework = arduino
 lib_extra_dirs = ~/Documents/Arduino/libraries
 monitor_speed = 115200
-lib_deps = majicdesigns/MD_Parola@^3.7.1
+lib_deps = 
+	majicdesigns/MD_Parola@^3.7.1
+	bblanchon/ArduinoJson@^6.21.3
+	thebigpotatoe/Effortless-SPIFFS@^2.3.0
 board = esp32doit-devkit-v1
 upload_port = COM3
 
