Begin adding ws2812b handling code

--- a/platformio.ini
+++ b/platformio.ini
@@ -14,9 +14,9 @@ framework = arduino
 lib_extra_dirs = ~/Documents/Arduino/libraries
 monitor_speed = 115200
 lib_deps = 
-	majicdesigns/MD_Parola@^3.7.1
 	bblanchon/ArduinoJson@^6.21.3
 	thebigpotatoe/Effortless-SPIFFS@^2.3.0
+	iakop/LiquidCrystal_I2C_ESP32@^1.1.6
 board = esp32doit-devkit-v1
 upload_port = COM3
 
