--- a/platformio.ini
+++ b/platformio.ini
@@ -17,6 +17,7 @@ lib_deps =
 	bblanchon/ArduinoJson@^6.21.3
 	thebigpotatoe/Effortless-SPIFFS@^2.3.0
 	iakop/LiquidCrystal_I2C_ESP32@^1.1.6
+	adafruit/Adafruit NeoPixel@^1.12.3
 board = esp32doit-devkit-v1
 upload_port = COM3
 
