--- a/platformio.ini
+++ b/platformio.ini
@@ -18,6 +18,7 @@ lib_deps =
 	thebigpotatoe/Effortless-SPIFFS@^2.3.0
 	iakop/LiquidCrystal_I2C_ESP32@^1.1.6
 	adafruit/Adafruit NeoPixel@^1.12.3
+	fastled/FastLED@^3.7.8
 board = esp32doit-devkit-v1
 upload_port = COM3
 
