Migrated to MAC development env

--- a/platformio.ini
+++ b/platformio.ini
@@ -20,7 +20,7 @@ lib_deps =
 	adafruit/Adafruit NeoPixel@^1.12.3
 	fastled/FastLED@^3.7.8
 board = esp32doit-devkit-v1
-upload_port = COM3
+;upload_port = COM3
 
 [platformio]
 description = Pinball Operating system for the ESP32 chip
