--- a/platformio.ini
+++ b/platformio.ini
@@ -19,8 +19,7 @@ lib_deps =
 	iakop/LiquidCrystal_I2C_ESP32@^1.1.6
 	adafruit/Adafruit NeoPixel@^1.12.3
 	fastled/FastLED@^3.7.8
-board = esp32doit-devkit-v1
-;upload_port = COM3
+board = denky32
 
 [platformio]
 description = Pinball Operating system for the ESP32 chip
